components/humantask/humantask-explorer-web/src/web/css/style.css
/* ... */
.center {
    text-align: center;
}

.right {
    text-align: right;
}

.left {
    text-align: left;
}

.justify {
    text-align: justify;
}

.middle {
    vertical-align: middle;
}

.top {
    vertical-align: top;
}

.middle {
    vertical-align: middle;
}

.bottom {
    vertical-align: bottom;
}

.rounded {
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
}

.opacity {
    opacity: 0.8;
}

.circle {
    background: none repeat scroll 0 0 blue;
    border-radius: 50%;
    height: 20px;
    width: 20px;
    color: #fff;
    margin-left: 50px;
    float: right;
}
/*  _____________________________________________________________________________

     BACKGROUND
    _____________________________________________________________________________  */

.grey-bg {
    background-color: #f6f4f4;
}

.light-grey-bg {
    background-color: #f5f5f5;
}

.white-bg {
    background-color: #fff;
}

.off-white {
    background-color: #3a9ecf;
}

.dark-grey {
    background-color: #2a2a2a;
}

.blue-bg {
    background-color: #00979c;
}

.light-blue-bg {
    background-color: #00deff;
}

.light-yellow-bg {
    background-color: #efd924;
}

.light-green-bg {
    background-color: #00d482;
}

.light-red-bg {
    background-color: #ff7058;
}

.dark-red-bg {
    background-color: #be2d28;
}
/*  _____________________________________________________________________________

     Main
    _____________________________________________________________________________  */

body {
    background-color: #F9F9F9;
}

header {
    background-color: #282828;
    height: 50px;
    color: #fff;
}

.logo-wrapper {
    padding: 6px 11px 10 14px;
    float: left;
}

.logo-wrapper a {
    color: #fff;
    font-size: 28px;
}

.login-wrapper {
    float: right;
    background-color: #272727;
    color: #fff;
    height: 50px;
    padding: 10px 15px;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.navbar-default {
    background: #be2d28;
    border-radius: 0px;
    border: 0px;
}

.app-logo {
    height: 50px;
    padding: 12px 10px;
}

.app-logo a img,
.app-logo a h2 {
    float: left;
}

.app-logo a h2 {
    margin-left: 10px;
}

h2.app-title {
    font-weight: 500;
    font-size: 17px;
    margin: 0;
    padding: 3px 0 0 0;
    color: #fafafa;
    text-transform: uppercase;
}

a.collapsing-h2 h2 {
    margin: 0 0 20px 0;
    color: #222222;
    font-size: 22px;
    font-weight: 200;
    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    padding-bottom: 10px;
}

a.collapsing-h2 {
    text-decoration: none;
}

.wr-navbar-inner {
    padding: 0;
}

.navbar-collapse {
    padding-left: 0;
}

.navbar {
    max-height: 50px;
}

.navbar-default .navbar-nav > li > a {
    color: #e4e4e4;
    text-transform: uppercase;
}

.nav>li>a {
    padding: 5px 15px;
}

.navbar-nav>li>a {
    padding: 5px 15px;
}

.panel-primary > .panel-heading {
    background: #f3f5f6;
    border: 0px;
    border-radius: 0px;
    color: #080808;
    height: 55px;
    margin-bottom: 10px;
}

.heading-wrapper {
    background: #f3f5f6;
    border: 0px;
    border-radius: 0px;
    color: #080808;
    height: 55px;
    margin-bottom: 10px;
    width: 100%;
}

.panel-primary {
    border: 0px;
    border-radius: 0px;
}

.panel {
    background-color: #282828 width: 99%
}

.panel-inbox {
    width: 99%
}

.table-title {
    background: #7A7A7A ;
    border: 0px;
    border-radius: 0px;
    color: #fff;
    height: 55px;
    padding: 10px 0 0px 10px;
    font-size: 20px;
}

.table-body {
    padding: 0px;
}

.table-title-row {
    background: #f5f5f5;
    height: 50px;
    padding-top: 10px;
}

.table-status-column {
    background: #282828;
    height: 440px;
    color: #fff;
}

.table-status-column a {
    color: #fff;
    font-size: 16px;
}

.main {
    height: 440px;
}

.breadcrumb {
    width: 98%;
    overflow: hidden;
    margin-left: 20px;
    border-radius: 0;
}

.row {
    margin-right: 0px;
    margin-left: 0px;
}

.pagination {
    border-radius: 0px;
    height: 50px;
    float: right;
    margin-right: 20px;
}

.pagination>li:first-child>a,
.pagination>li:first-child>span {
    border-radius: 0;
}

.pagination>li:last-child>a,
.pagination>li:last-child>span {
    border-radius: 0;
}

.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
    background-color: #be2d28;
    border-color: #be2d28;}

.pagination > li > a, .pagination > li > span {
    color: #333;
}

.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
    outline: none;
    border-color: #DDD;
}

footer {
    bottom: 0;
    height: 100px;
    left: 0;
    position: absolute;
    width: 100%;
}

.well {
    background: #282828 none repeat scroll 0 0;
    border: 0 none;
    border-radius: 0;
    bottom: 0;
    height: 42px;
    left: 0;
    margin-bottom: 0;
    position: fixed;
    width: 100%;
    color: #fff;
}

.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
    color: #f0f0f0;
    opacity: 0.6;
}

.nav>li>a:hover,
.nav>li>a:focus {
    text-decoration: none;
    background-color: #444444;
}

.nav-pills>li>a {
    border-radius: 0px
}

.table-row {
    border-color: #f1f1f1;
}

.btn-default {
    background-image: none;
    border-color: #4f4f4f;
    text-shadow: none;
    background-color: #434343;
    color: #f2f2f2;
    padding: 10px 15px;
    min-width: 75px;
    font-weight: 100;
    border-radius: 0px;
}

.btn-default:hover,
.btn-default:focus,
.btn-default:active,
.btn-default.active,
.open>.dropdown-toggle.btn-default {
    color: #ccc;
    background-color: #535353;
    border-color: #434343;
    text-shadow: none;
    border-radius: 0px;
}

.col-centered {
    float: none;
    margin: 0 auto;
}

.wr-login {
    padding-top: 50px;
}
/* ... */

